--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport">
+    <meta http-equiv="X-UA-Compatible">
     <link rel="stylesheet" type="text/css" href="renderColor.css">
     <link rel="stylesheet" type="text/css" href="els.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,7 +45,7 @@
         </ul>
     </nav>
     <title>RB Proto</title>
-</header>
+</head>
 <body>
   <article id="Welcome-project-pg">
     <div class="section">
