--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport">
     <meta http-equiv="X-UA-Compatible">
@@ -45,7 +45,7 @@
         </ul>
     </nav>
     <title>RB Proto</title>
-</header>
+</head>
 <body>
   <article id="Welcome-project-pg">
     <div class="section">
@@ -853,7 +853,23 @@
   </article>
   <article id="Contact-pg">
     <div class="section">
-      Contact
+      <br>
+      Example 1
+      <br>
+      <br>
+      <br>
+      <hr>
+      <br>
+      Example 2
+      <br>
+      <br>
+      <br>
+      <hr>
+      <br>
+      Example 3
+      <br>
+      <br>
+      <br>
     </div>
   </article>
   <article id="Faq-pg" class="breakout">
@@ -1065,6 +1081,12 @@
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+    </div>
+  </article>
+  <article id="Contact-pg">
+    <div class="section">
+      <h3> Contact </h3>
+      <p> Email: rbthis@ringbus.com</p>
     </div>
   </article>
 </body>
