--- a/site/index.html
+++ b/site/index.html
@@ -854,6 +854,9 @@
   <article id="Contact-pg">
     <div class="section">
       <br>
+      <h3 style="text: center;" > Examples </h3>
+      <br>
+      <br>
       Example 1
       <br>
       <br>
@@ -875,6 +878,7 @@
   <article id="Faq-pg" class="breakout">
     <div class="section">
       <h3> Frequently Asked Questions </h3>
+
       <button class="q fa fa-angle-right"></button> 
       <span>What is a Bus?</span>
       <br>
@@ -882,211 +886,130 @@
         Bus is how data signals are arranged. 
         Most common arrangement includes the ring bus.</div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>How does Bus Work?</span>
       <br>
       <div class="q_section"> Signals. Thats how.</div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>What is a Ring Bus?</span>
       <br>
       <span class="q_section"> A ring bus is a method of which data gets transferred. </span>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+      
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
+      <button class="q fa fa-angle-right"></button> 
+      <span>What is a Bus?</span>
+      <br>
+      <div class="q_section"> 
+        Bus is how data signals are arranged. 
+        Most common arrangement includes the ring bus.</div>
+      <br>
+
+      <button class="q fa fa-angle-right"></button> 
+      <span>How does Bus Work?</span>
+      <br>
+      <div class="q_section"> Signals. Thats how.</div>
+      <br>
+
+      <button class="q fa fa-angle-right"></button> 
+      <span>What is a Ring Bus?</span>
+      <br>
+      <span class="q_section"> A ring bus is a method of which data gets transferred. </span>
+      <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
+      
       <button class="q fa fa-angle-right"></button> 
       <span>Pros and Cons of General Ring Bus?</span>
       <br>
       <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
       <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
       <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
-      <button class="q fa fa-angle-right"></button> 
-      <span>Pros and Cons of General Ring Bus?</span>
-      <br>
-      <div class="q_section"> No idea. Speed offsets the price. </div>
-      <br>
+
     </div>
   </article>
   <article id="Contact-pg">
     <div class="section">
       <h3> Contact </h3>
       <p> Email: rbthis@ringbus.com</p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
   </article>
 </body>
